Fix flakiness in supervised user password change tests

This fixes a race in SupervisedUserTestBase::StartFlowLoginAsManager.
StartFlowLoginAsManager used to wait for login profile preparation and
then force the user's OAUTH2 token status for the user. Though, during
profile creation, UserSessionManager would attempt to restore the
previous session and start async OAuth2 token fetch. If the token
fetch completed (with failure) after the test set user's oauth2 token,
supervised creation flow would end up in an error state, and cause
test failures.

This fixes SupervisedUserTestBase to inject fake oauth2 token service
into the login profile, and sets the fake refresh token for the test
user (so the oauth2 token state is set to valid during the profile
initialization).

BUG=772387

Change-Id: I00e30dafa372b705a429fb7070c386ccfb0985ee
Reviewed-on: https://chromium-review.googlesource.com/732183
Reviewed-by: Alexander Alekseev <alemate@chromium.org>
Reviewed-by: Achuith Bhandarkar <achuith@chromium.org>
Commit-Queue: Toni Barzic <tbarzic@chromium.org>
Cr-Commit-Position: refs/heads/master@{#510886}
Former-commit-id: 536465432924b78d74cc4e5f4bada9ff8616b83a